--- a/src/Styles/Global.scss
+++ b/src/Styles/Global.scss
@@ -14,6 +14,15 @@ body{
     flex-direction: row;
 }
 
+.bienvenida{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 main{
     width: 100%;
     padding: 4em 7em;
@@ -27,7 +36,7 @@ main{
     }
 }
 
-.botones{
+.contenedor{
     width: 100%;
     padding: 1em 0;
     .capsu {
@@ -37,13 +46,13 @@ main{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        input{
-            width: 32%;
-            border: none;
-            background: none;
-            padding-bottom: 1em;
-            color: $negro !important;
-        }
+        // input{
+        //     width: 32%;
+        //     border: none;
+        //     background: none;
+        //     padding-bottom: 1em;
+        //     color: $negro !important;
+        // }
         .padre{
             width: 100%;
             display: flex;
